# cms-rust

./: .env  Cargo.toml  README.md  database.sql  docker-compose.yml
data/: customers.json
migrations/2020-11-20-104555_customers_catalog_initial_schema/: up.sql
src/: data_access.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  pool.rs  routes.rs  schema.rs  types.rs
